# aiana

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
bootstrap/: user-preferences.md
docs/: ANTHROPIC_API_REFERENCE.md  ARCHITECTURE.md  CLAUDE_CODE_INTERNALS.md  CONTEXT_INJECTION.md  MCP_SERVER.md  STORAGE.md  TOS_COMPATIBILITY_ANALYSIS.md
docs/decisions/: 001-dependency-integration-strategy.md
src/aiana/: __init__.py  bootstrap.py  cli.py  config.py  hooks.py  models.py  watcher.py
src/aiana/context/: __init__.py  injector.py
src/aiana/embeddings/: __init__.py  embedder.py
src/aiana/mcp/: __init__.py  server.py
src/aiana/storage/: __init__.py  mem0.py  qdrant.py  redis.py  sqlite.py
